change pom.xml